# catia-v5-mcp-server

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  GAP_ANALYSIS.md  LICENSE  README.md  REQUIREMENTS.md  build_housing.py  mcp_client.py  pyproject.toml  run_realtests.py  setup.sh  test_donut.py  test_line_simple.vbs  test_new_tools.py  test_new_tools_live.py
catia_mcp/: __init__.py  __main__.py  __version__.py  connection.py  server.py  utils.py
catia_mcp/tools/: __init__.py  assembly.py  document.py  export.py  gsd.py  measurement.py  part_design.py  sketcher.py
docs/: ANALYSIS_COMPARISON.md  BUG_ANALYSIS.md  CODE_REVIEW.md  GAP_ANALYSIS.md  MIGRATION_PLAN.md  OPENCODE_INTEGRATION.md  REALTEST_PLAN.md  REALTEST_RESULTS.md  REQUIREMENTS.md  TEST_PLAN.md  TEST_SPEC_PHASE5A.md  TEST_SPEC_PHASE6.md
docs/references/: hybridshape_factory_api.json
tests/: TEST_SPECIFICATION.md  TEST_SPEC_SSE.md  conftest.py  test_assembly_tools.py  test_connection.py  test_document_tools.py  test_entry_points.py  test_export_tools.py  test_gsd_tools.py  test_measurement_tools.py  test_part_design_tools.py  test_server.py  test_sketcher_tools.py  test_sse.py  test_utils.py
